@@ -1,3 +1,9 @@
+lod2statworkbench (0.0.5) lod2; urgency=low
+
+  * fix datahub.io configuration, removed unexisting documentation elements from menu.
+
+ -- Karel Kremer <Karel.Kremer@tenforce.com>  Tue, 1 Oct 2013 15:39:35 +0100
+
 lod2statworkbench (0.0.4) lod2; urgency=low
 
   * fix proxy settings
